[package]
name = "day04"
version = "0.1.0"
authors = ["Andrew Dibble <acdibble@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[[bin]]
name = "part1"
path = "part1.rs"

[[bin]]
name = "part2"
path = "part2.rs"
