[package]
name = "day06"
version = "0.1.0"
authors = ["Andrew Dibble <acdibble@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "part1"
path = "part1.rs"

[[bin]]
name = "part2"
path = "part2.rs"

[lib]
name = "coorindate_map"
path = "coordinate_map.rs"
